--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
      <img src="img/logo.png" alt="img">
      <h1>Company<span class="and"> &amp;
      </span>co</h1>
-     <h3>car shop for fanatics</h3>
+     <h3>car shop for Backpackers</h3>
      <div class="banner-icons">
          <a href=""><i class="fab fa-facebook-f"></i>
          </a>
